--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "pg-appointments": {
+    "shopping-pal": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
